; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-sprd-adi.c_sprd_adi_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-sprd-adi.c_sprd_adi_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.spi_controller = type { i32 }
%struct.sprd_adi = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @sprd_adi_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sprd_adi_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.spi_controller*, align 8
  %4 = alloca %struct.sprd_adi*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %5, i32 0, i32 0
  %7 = call %struct.spi_controller* @dev_get_drvdata(i32* %6)
  store %struct.spi_controller* %7, %struct.spi_controller** %3, align 8
  %8 = load %struct.spi_controller*, %struct.spi_controller** %3, align 8
  %9 = call %struct.sprd_adi* @spi_controller_get_devdata(%struct.spi_controller* %8)
  store %struct.sprd_adi* %9, %struct.sprd_adi** %4, align 8
  %10 = load %struct.sprd_adi*, %struct.sprd_adi** %4, align 8
  %11 = getelementptr inbounds %struct.sprd_adi, %struct.sprd_adi* %10, i32 0, i32 0
  %12 = call i32 @unregister_restart_handler(i32* %11)
  ret i32 0
}

declare dso_local %struct.spi_controller* @dev_get_drvdata(i32*) #1

declare dso_local %struct.sprd_adi* @spi_controller_get_devdata(%struct.spi_controller*) #1

declare dso_local i32 @unregister_restart_handler(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
